--- a/src/Configs.scss
+++ b/src/Configs.scss
@@ -1,4 +1,4 @@
-$primary: #092f56;
+$primary: #051f39;
 $secondary: #eff0f4;
 $light: #6b859e;
 
@@ -8,5 +8,6 @@ $private-header-height: 5.75rem;
 $private-footer-height: 4.25rem;
 
 $body-color: #212529;
+$body-backgroundColor: #eff0f4;
 
 $links-color: $primary;
