--- a/src/pages/public/Public.scss
+++ b/src/pages/public/Public.scss
@@ -11,6 +11,18 @@ body {
 			background-size: contain;
 			height: 100vh;
 			min-height: 600px;
+
+			.sign {
+				#icon {
+					width: 70px;
+					height: 70px;
+					border-radius: 50%;
+					position: absolute;
+					left: 50%;
+					top: 0;
+					transform: translateX(-50%) translateY(-50%);
+				}
+			}
 		}
 	}
 }
