--- a/src/pages/public/Public.scss
+++ b/src/pages/public/Public.scss
@@ -3,16 +3,16 @@
 body {
 	&.public {
 		#root {
-			grid-template-rows: 100vh;
+			grid-template-rows: 100%;
 			grid-template-areas: 'main';
 			background-image: url(/src/assets/public-background.svg);
 			background-position: bottom;
 			background-repeat: no-repeat;
 			background-size: contain;
-			height: 100vh;
-			min-height: 600px;
-
+			height: 100%;
+			min-height: 100vh;
 			.sign {
+				padding: 65px 0px 30px 0px;
 				#icon {
 					width: 70px;
 					height: 70px;
