--- a/src/Configs.scss
+++ b/src/Configs.scss
@@ -10,4 +10,8 @@ $private-footer-height: 4.25rem;
 $body-color: #212529;
 $body-backgroundColor: #eff0f4;
 
+$header-height: 80px;
+
+$footer-height: 100px;
+
 $links-color: $primary;
