--- a/src/pages/public/Public.scss
+++ b/src/pages/public/Public.scss
@@ -2,6 +2,8 @@
 
 body {
 	&.public {
+		background-color: configs.$body-backgroundColor;
+		font-family: 'Poppins', 'Monserrat' !important;
 		#root {
 			grid-template-rows: 100%;
 			grid-template-areas: 'main';
@@ -9,18 +11,23 @@ body {
 			background-position: bottom;
 			background-repeat: no-repeat;
 			background-size: contain;
-			height: 100%;
-			min-height: 100vh;
-			.sign {
-				padding: 65px 0px 30px 0px;
-				#icon {
-					width: 70px;
-					height: 70px;
-					border-radius: 50%;
-					position: absolute;
-					left: 50%;
-					top: 0;
-					transform: translateX(-50%) translateY(-50%);
+			main {
+				width: 100%;
+				min-height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				.sign {
+					padding: 65px 0px 30px 0px;
+					#icon {
+						width: 70px;
+						height: 70px;
+						border-radius: 50%;
+						position: absolute;
+						left: 50%;
+						top: 0;
+						transform: translateX(-50%) translateY(-50%);
+					}
 				}
 			}
 		}
