--- a/src/ui/UI.scss
+++ b/src/ui/UI.scss
@@ -20,7 +20,7 @@
 			}
 		}
 		nav {
-			padding-left: 0.5rem 0px 0.5rem 20px;
+			// padding-left: 0.5rem 0px 0.5rem 20px;
 			ul {
 				list-style-type: none;
 				display: flex;
